# Geoalloc

./: .gitignore  Dockerfile  ModelTrainedLogs.txt  README.md  RawModelTrainedLoga.txt  TRAINING_EVIDENCE.md  __init__.py  api_docs.md  app.py  client.py  hf_blog_post.md  inference.py  models.py  openenv.yaml  openenv_hackathon_combined.json  pitch_deck_content.md  prepare_autotrain.py  project_context.md  pyproject.toml  requirements.txt  secureheal_cli.py  test_output.txt  trigger_cloud.py  video_script.md
backend/: main.py
demo/: run_demo.bat  vulnerable_app.py
env/: reward.py
env/graders/: grader.py
env/tasks/: hard.py  medium.py
geoalloc-env/: Dockerfile  README.md  collect_states.py  evaluate.py  inference.py  openenv.yaml  requirements.txt  test_pipeline.py  train.jsonl  train.py  training_observations.json  visualize_results.py
geoalloc-env/docs/: round2_analysis_report.md
geoalloc-env/env/: env.py  models.py  reward.py
geoalloc-env/geoalloc_agent_grpo/: rollout_log.txt  (+4 more)
geoaloc/: AGENTS.md  package-lock.json  package.json
kaggle/: train_kaggle.py  training_observations.json
openenv_geoalloc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
secureheal_arena/: __init__.py  anomalies.py  client.py  models.py  openenv.yaml  rewards.py  sandbox.py  vulnerabilities.py
server/: app.py  geoalloc_environment.py
space/: README.md  app.py  requirements.txt
tests/: quick_test.py  test_environment_local.py
training/: Dockerfile.training  SecureHeal_Arena_Training.ipynb  requirements.hf.txt  train.py  train_hf_job.py
(+24 files in other folders)
